--- a/style.css
+++ b/style.css
@@ -9,25 +9,27 @@ b {
 
 }
 
-.container {
+.banner {
     width: 100%;
 }
 
 .image {
     width: 100%;
+    height: 100vh;
+    margin-bottom: 50px;
 
 }
 
 .title {
-    font-size: 70px;
-    color: darkgoldenrod;
+    font-size: 50px;
     text-align: center;
+    margin-top: 100px;
+    margin-bottom: 50px;
 
 }
 
 .title2 {
-    font-size: 30px;
-    color: darkgoldenrod;
+    font-size: 20px;
     text-align: center;
     margin-bottom: 30px;
 
@@ -36,11 +38,117 @@ b {
 .link-button {
     text-decoration: none;
     background-image: linear-gradient(orange, tomato);
-    color: white;
+    color: black;
     font-weight: 700;
     padding: 10px 30px;
     border-radius: 5px;
     margin-left: 45%;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.dnt-btn {
+    display: flex;
+    margin-top: 50px;
+    margin-left: 250px;
+    margin-right: 250px;
+}
+
+.p1 {
+    width: 70px;
+    height: 70px;
+    margin-left: 50px;
+    margin-right: 100px;
+    padding: 20px;
+    border: 1px solid black;
+    background-color: lightgray;
+}
+
+.p2 {
+    width: 70px;
+    height: 70px;
+    margin-left: 50px;
+    margin-right: 100px;
+    padding: 20px;
+    border: 1px solid black;
+    background-color: lightcoral;
+}
+
+.p3 {
+    width: 100px;
+    height: 70px;
+    margin-left: 50px;
+    margin-right: 100px;
+    padding: 20px;
+    border: 1px solid black;
+    background-color: lightgray;
+}
+
+.p4 {
+    width: 70px;
+    height: 70px;
+    margin-left: 50px;
+    margin-right: 100px;
+    padding: 20px;
+    border: 1px solid black;
+    background-color: lightgray;
+}
+
+.p5 {
+    width: 70px;
+    height: 70px;
+    margin-left: 50px;
+    margin-right: 100px;
+    padding: 20px;
+    border: 1px solid black;
+    background-color: lightgray;
+}
+
+.card-section {
+    margin-top: 70px;
+    margin-bottom: 50px;
+}
+
+.card-title {
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.card-segment {
+    display: flex;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.card1 {
+    width: 300px;
+    height: 200px;
+    margin-left: 150px;
+    margin-right: 100px;
+    padding: 20px;
+    border: 1px solid gray;
+    background-color: cadetblue;
+}
+
+.card2 {
+    width: 300px;
+    height: 200px;
+    margin-left: 150px;
+    margin-right: 100px;
+    padding: 20px;
+    border: 1px solid gray;
+    background-color: indianred;
+}
+
+.card3 {
+    width: 300px;
+    height: 200px;
+    margin-left: 150px;
+    margin-right: 100px;
+    padding: 20px;
+    border: 1px solid gray;
+    background-color: darksalmon;
 }
 
 footer {
